Finishing team and invite system