@@ -5,6 +5,7 @@ import me.antidotaleks.iter.maps.Map;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
 import java.util.Random;
@@ -12,9 +13,9 @@ import java.util.Random;
 public class StartGameCommand implements TabExecutor {
     Random random = new Random();
     @Override
-    public boolean onCommand(CommandSender commandSender, Command command, String s, String[] strings) {
+    public boolean onCommand(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, String[] strings) {
         while (!GameManager.games.isEmpty()) {
-            GameManager.stopGame(GameManager.games.get(0));
+            GameManager.stopGame(GameManager.games.getFirst());
         }// TODO remove later
         System.out.println("Choose random map");
         Map map = GameManager.maps.get(random.nextInt(GameManager.maps.size())); // Choose random map
@@ -24,7 +25,7 @@ public class StartGameCommand implements TabExecutor {
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender commandSender, Command command, String s, String[] strings) {
+    public List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, String[] strings) {
 
         return null;
     }
